--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@react-theming/theme-name": "^1.0.3",
     "@react-theming/theme-swatch": "^1.0.0",
     "@storybook/addon-devkit": "^1.4.1",
-    "@usulpro/react-json-view": "^2.0.1",
+    "react-json-view": "^2.0.1",
     "react-color": "^2.18.0"
   },
   "relativeDependencies": {
